--- a/kali/www/terminal.html
+++ b/kali/www/terminal.html
@@ -11,7 +11,8 @@
 
 <style>
   body {
-    background: url("https://wallpaperaccess.com/full/4238588.png") no-repeat center center fixed;
+    background: url("https://i.redd.it/g8ud4yocwbeb1.png") no-repeat center center fixed;
+    /* background: url("https://wallpaperaccess.com/full/4238588.png") no-repeat center center fixed; */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -173,6 +174,24 @@
           <th>Certificação</th>
           <th>Entidade</th>
           <th>Identificador</th>
+        </tr>
+
+        <tr>
+          <td>Certified Mobile Pentester (CMPen-Android)</td>
+          <td>The SecOps Group</td>
+          <td><button onclick="cert4()">9307164</button></td>
+        </tr>
+
+        <tr>
+          <td>Certified Mobile Pentester (CMPen-iOS)</td>
+          <td>The SecOps Group</td>
+          <td><button onclick="cert5()">9336268</button></td>
+        </tr>
+
+        <tr>
+          <td>eJPT - Junior Penetration Tester</td>
+          <td>INE Security</td>
+          <td><button onclick="cert6()">123890897</button></td>
         </tr>
 
         <tr>
